Fix disk explorer tooltip z-index to appear above all other elements

--- a/src/js/css/disk-explorer.css
+++ b/src/js/css/disk-explorer.css
@@ -210,7 +210,7 @@
   pointer-events: none;
   opacity: 0;
   transition: opacity 0.1s;
-  z-index: 10;
+  z-index: 100000;
   white-space: nowrap;
 }
 
